Files cleanup + Css fixes + favicon

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Sushi Rice Calculator</title>
+
+    <link rel="icon" href="favicon.png">
+    <title>Sushi Rice Calculator&nbsp;🍣</title>
+    <meta name="description" content="Calculate the required quantities for a perfect sushi rice!">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
